<resources>
    <string name="app_name">Paasto</string>
    <string name="fast_start">Start fast</string>
    <string name="fast_stop">End fast</string>
    <string name="num_invalid" translatable="false">--</string>
    <string name="timer_format" translatable="false">%02d : %02d : %02d</string>
    <string name="pos_timer_format" translatable="false">+ %02d : %02d : %02d</string>
    <string name="neg_timer_format" translatable="false">- %02d : %02d : %02d</string>
    <string name="confirm_fast_end">Are you sure you want to end your fast?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="hour_format" translatable="false">%d h</string>
    <string name="fast_start_time">Fast start time</string>
    <string name="fast_end_time">Fast end time</string>
    <string name="fast_duration">Fast duration: %d h %d min</string>
    <string name="set_target">Set target</string>
    <string name="hours">hours</string>
    <string name="hours_unit" translatable="false">h</string>
    <string name="fast_target">Fast target length</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="timer">Timer</string>
    <string name="log">Log</string>
    <string name="log_empty">No logged fasts yet</string>
    <string name="log_fast_dur_target" translatable="false">%02d h %02d min / %02d h</string>
    <string name="time_since_last_fast">Time since last fast</string>
    <string name="action_reminders">Reminders</string>
    <string name="reminder_title">Reminders</string>
    <string name="fast_end_notify">Show notification when target is reached</string>
    <string name="eating_time">Show reminder after</string>
    <string name="start_reminder">Show fast start reminder</string>
    <string name="notification_channel_description" translatable="false">Paasto reminder notifications</string>
    <string name="progress">Progress</string>
    <string name="last_5_fast_title">Last 5 fasts</string>
    <string name="hour_min_duration">%1$02d:%2$02d</string>
</resources>