<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_timer"
    android:name="TimerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/fastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="fastButtonClicked"
        android:text="@string/fast_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor_guide" />

    <Button
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="startTimeClicked"
        android:text="@string/num_invalid"
        android:textColor="@color/textOnPrimary"
        app:backgroundTint="@color/primaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastButton" />

    <Button
        android:id="@+id/targetDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="fastTargetClicked"
        android:text="@string/num_invalid"
        android:textColor="@color/textOnPrimary"
        app:backgroundTint="@color/primaryLight"
        app:layout_constraintBottom_toTopOf="@+id/fastTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetReachedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/num_invalid"
        android:textColor="@color/textOnBackground"
        app:layout_constraintEnd_toEndOf="@+id/targetDuration"
        app:layout_constraintStart_toStartOf="@+id/targetDuration"
        app:layout_constraintTop_toBottomOf="@+id/targetDuration" />

    <TextView
        android:id="@+id/fastTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/num_invalid"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/textOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/hor_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="fastButton,fastTime,timeSinceLastLabel"
        tools:layout_editor_absoluteY="589dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bot_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="fastButton,fastTime"
        tools:layout_editor_absoluteY="589dp" />

    <TextView
        android:id="@+id/timeSinceLastLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/time_since_last_fast"
        android:textColor="@color/textOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/fastTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
